replace LLVM artifacts for Linux & Mac

--- a/kotlin-native/konan/konan.properties
+++ b/kotlin-native/konan/konan.properties
@@ -36,12 +36,12 @@ reducedLlvmAppendix = compact
 
 predefinedLlvmDistributions = \
   apple-llvm-20200714-macos-x64-1 \
-  apple-llvm-20200714-macos-aarch64-1 \
-  llvm-11.1.0-linux-x64-2 \
+  llvm-11.1.0-aarch64-macos-dev-test-1 \
+  llvm-11.1.0-x86_64-linux-dev-test-1 \
   llvm-11.1.0-windows-x64-2 \
   apple-llvm-20200714-macos-x64-essentials \
-  apple-llvm-20200714-macos-aarch64-essentials \
-  llvm-11.1.0-linux-x64-essentials \
+  llvm-11.1.0-aarch64-macos-essentials-test-1 \
+  llvm-11.1.0-x86_64-linux-essentials-test-1 \
   llvm-11.1.0-windows-x64-essentials
 
 predefinedLibffiVersions = \
@@ -50,8 +50,8 @@ predefinedLibffiVersions = \
   libffi-3.2.1-2-linux-x86-64 \
   libffi-3.3-windows-x64-1
 
-llvm.linux_x64.dev = llvm-11.1.0-linux-x64-2
-llvm.linux_x64.user = llvm-11.1.0-linux-x64-essentials
+llvm.linux_x64.dev = llvm-11.1.0-x86_64-linux-dev-test-1
+llvm.linux_x64.user = llvm-11.1.0-x86_64-linux-essentials-test-1
 
 llvm.mingw_x64.dev = llvm-11.1.0-windows-x64-2
 llvm.mingw_x64.user = llvm-11.1.0-windows-x64-essentials
@@ -59,8 +59,8 @@ llvm.mingw_x64.user = llvm-11.1.0-windows-x64-essentials
 llvm.macos_x64.dev = apple-llvm-20200714-macos-x64-1
 llvm.macos_x64.user = apple-llvm-20200714-macos-x64-essentials
 
-llvm.macos_arm64.dev = apple-llvm-20200714-macos-aarch64-1
-llvm.macos_arm64.user = apple-llvm-20200714-macos-aarch64-essentials
+llvm.macos_arm64.dev = llvm-11.1.0-aarch64-macos-dev-test-1
+llvm.macos_arm64.user = llvm-11.1.0-aarch64-macos-essentials-test-1
 
 # By default LLVM uses 250 for -03 builds.
 # We use a smaller value since default value leads to
