--- a/kotlin-native/konan/konan.properties
+++ b/kotlin-native/konan/konan.properties
@@ -36,13 +36,13 @@ reducedLlvmAppendix = compact
 
 predefinedLlvmDistributions = \
   apple-llvm-20200714-macos-x64-1 \
-  llvm-11.1.0-aarch64-macos-dev-test-1 \
-  llvm-11.1.0-x86_64-linux-dev-test-1 \
-  llvm-11.1.0-windows-x64-2 \
+  llvm-11.1.0-aarch64-macos-dev-test-2 \
+  llvm-11.1.0-x86_64-linux-dev-test-2 \
+  llvm-11.1.0-x86_64-windows-dev-test-2 \
   apple-llvm-20200714-macos-x64-essentials \
-  llvm-11.1.0-aarch64-macos-essentials-test-1 \
-  llvm-11.1.0-x86_64-linux-essentials-test-1 \
-  llvm-11.1.0-windows-x64-essentials
+  llvm-11.1.0-aarch64-macos-essentials-test-2 \
+  llvm-11.1.0-x86_64-linux-essentials-test-2 \
+  llvm-11.1.0-x86_64-windows-essentials-test-2
 
 predefinedLibffiVersions = \
   libffi-3.2.1-3-darwin-macos \
@@ -50,17 +50,17 @@ predefinedLibffiVersions = \
   libffi-3.2.1-2-linux-x86-64 \
   libffi-3.3-windows-x64-1
 
-llvm.linux_x64.dev = llvm-11.1.0-x86_64-linux-dev-test-1
-llvm.linux_x64.user = llvm-11.1.0-x86_64-linux-essentials-test-1
+llvm.linux_x64.dev = llvm-11.1.0-x86_64-linux-dev-test-2
+llvm.linux_x64.user = llvm-11.1.0-x86_64-linux-essentials-test-2
 
-llvm.mingw_x64.dev = llvm-11.1.0-windows-x64-2
-llvm.mingw_x64.user = llvm-11.1.0-windows-x64-essentials
+llvm.mingw_x64.dev = llvm-11.1.0-x86_64-windows-dev-test-2
+llvm.mingw_x64.user = llvm-11.1.0-x86_64-windows-essentials-test-2
 
 llvm.macos_x64.dev = apple-llvm-20200714-macos-x64-1
 llvm.macos_x64.user = apple-llvm-20200714-macos-x64-essentials
 
-llvm.macos_arm64.dev = llvm-11.1.0-aarch64-macos-dev-test-1
-llvm.macos_arm64.user = llvm-11.1.0-aarch64-macos-essentials-test-1
+llvm.macos_arm64.dev = llvm-11.1.0-aarch64-macos-dev-test-2
+llvm.macos_arm64.user = llvm-11.1.0-aarch64-macos-essentials-test-2
 
 # By default LLVM uses 250 for -03 builds.
 # We use a smaller value since default value leads to
