Update LLVM on Linux & macOS

--- a/kotlin-native/konan/konan.properties
+++ b/kotlin-native/konan/konan.properties
@@ -35,13 +35,13 @@ downloadingAttemptIntervalMs = 3000
 reducedLlvmAppendix = compact
 
 predefinedLlvmDistributions = \
-  apple-llvm-20200714-macos-x64-1 \
-  llvm-11.1.0-aarch64-macos-dev-70 \
-  llvm-11.1.0-x86_64-linux-dev-test-2 \
+  llvm-11.1.0-x86_64-macos-dev-14 \
+  llvm-11.1.0-aarch64-macos-dev-75 \
+  llvm-11.1.0-x86_64-linux-dev-7 \
   llvm-11.1.0-x86_64-windows-dev-16 \
-  apple-llvm-20200714-macos-x64-essentials \
-  llvm-11.1.0-aarch64-macos-essentials-66 \
-  llvm-11.1.0-x86_64-linux-essentials-test-2 \
+  llvm-11.1.0-x86_64-macos-essentials-12 \
+  llvm-11.1.0-aarch64-macos-essentials-70 \
+  llvm-11.1.0-x86_64-linux-essentials-27 \
   llvm-11.1.0-x86_64-windows-essentials-11
 
 predefinedLibffiVersions = \
@@ -50,17 +50,17 @@ predefinedLibffiVersions = \
   libffi-3.2.1-2-linux-x86-64 \
   libffi-3.3-windows-x64-1
 
-llvm.linux_x64.dev = llvm-11.1.0-x86_64-linux-dev-test-2
-llvm.linux_x64.user = llvm-11.1.0-x86_64-linux-essentials-test-2
+llvm.linux_x64.dev = llvm-11.1.0-x86_64-linux-dev-7
+llvm.linux_x64.user = llvm-11.1.0-x86_64-linux-essentials-27
 
 llvm.mingw_x64.dev = llvm-11.1.0-x86_64-windows-dev-16
 llvm.mingw_x64.user = llvm-11.1.0-x86_64-windows-essentials-11
 
-llvm.macos_x64.dev = apple-llvm-20200714-macos-x64-1
-llvm.macos_x64.user = apple-llvm-20200714-macos-x64-essentials
+llvm.macos_x64.dev = llvm-11.1.0-x86_64-macos-dev-14
+llvm.macos_x64.user = llvm-11.1.0-x86_64-macos-essentials-12
 
-llvm.macos_arm64.dev = llvm-11.1.0-aarch64-macos-dev-70
-llvm.macos_arm64.user = llvm-11.1.0-aarch64-macos-essentials-66
+llvm.macos_arm64.dev = llvm-11.1.0-aarch64-macos-dev-75
+llvm.macos_arm64.user = llvm-11.1.0-aarch64-macos-essentials-70
 
 # By default LLVM uses 250 for -03 builds.
 # We use a smaller value since default value leads to
