fixup! Update LLVM build

--- a/kotlin-native/konan/konan.properties
+++ b/kotlin-native/konan/konan.properties
@@ -38,11 +38,11 @@ predefinedLlvmDistributions = \
   llvm-11.1.0-x86_64-macos-dev-17 \
   llvm-11.1.0-aarch64-macos-dev-85 \
   llvm-11.1.0-x86_64-linux-dev-10 \
-  llvm-11.1.0-x86_64-windows-dev-30 \
+  llvm-11.1.0-x86_64-windows-dev-30-1 \
   llvm-11.1.0-x86_64-macos-essentials-15 \
   llvm-11.1.0-aarch64-macos-essentials-77 \
   llvm-11.1.0-x86_64-linux-essentials-31 \
-  llvm-11.1.0-x86_64-windows-essentials-23
+  llvm-11.1.0-x86_64-windows-essentials-23-1
 
 predefinedLibffiVersions = \
   libffi-3.2.1-3-darwin-macos \
@@ -53,8 +53,8 @@ predefinedLibffiVersions = \
 llvm.linux_x64.dev = llvm-11.1.0-x86_64-linux-dev-10
 llvm.linux_x64.user = llvm-11.1.0-x86_64-linux-essentials-31
 
-llvm.mingw_x64.dev = llvm-11.1.0-x86_64-windows-dev-30
-llvm.mingw_x64.user = llvm-11.1.0-x86_64-windows-essentials-23
+llvm.mingw_x64.dev = llvm-11.1.0-x86_64-windows-dev-30-1
+llvm.mingw_x64.user = llvm-11.1.0-x86_64-windows-essentials-23-1
 
 llvm.macos_x64.dev = llvm-11.1.0-x86_64-macos-dev-17
 llvm.macos_x64.user = llvm-11.1.0-x86_64-macos-essentials-15
